# QdrantMonitor

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/static/: style.css
app/templates/: base.html  collection.html  dashboard.html
app/templates/partials/: browse.html  search_id_result.html  search_text_result.html
